Fixed overflow in y-axis

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   place-items: center;
   /* overflow: hidden; */
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 form {
